--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
     <modules>
         <module>selene-core</module>
         <module>selene-common</module>
-        <module>sponge</module>
+        <module>sponge-112</module>
         <module>extensions</module>
         <module>sponge-extensions</module>
     </modules>
