--- a/sponge-112/pom.xml
+++ b/sponge-112/pom.xml
@@ -142,6 +142,14 @@
                                     <pattern>org.apache.commons</pattern>
                                     <shadedPattern>org.dockbox.shaded.apache.commons</shadedPattern>
                                 </relocation>
+                                <relocation>
+                                    <pattern>ninja.leaping.configurate</pattern>
+                                    <shadedPattern>org.dockbox.shaded.leaping.configurate</shadedPattern>
+                                </relocation>
+                                <relocation>
+                                    <pattern>com.typesafe.config</pattern>
+                                    <shadedPattern>org.dockbox.shaded.typesafe.config</shadedPattern>
+                                </relocation>
                             </relocations>
                         </configuration>
                     </execution>
