Fix tests not running with `test` goal

--- a/pom.xml
+++ b/pom.xml
@@ -274,6 +274,16 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.0</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>2.22.0</version>
+            </plugin>
 
             <!-- Dokka does not currently support multi-module projects, so it cannot be used (yet) -->
             <!--            <plugin>-->
