--- a/selene-common/pom.xml
+++ b/selene-common/pom.xml
@@ -37,7 +37,7 @@
         <dependency>
             <groupId>org.dockbox.selene</groupId>
             <artifactId>selene-core</artifactId>
-            <version>${parent.version}</version>
+            <version>${project.parent.version}</version>
         </dependency>
 
         <!-- Configurate -->
