--- a/selene-core/pom.xml
+++ b/selene-core/pom.xml
@@ -100,7 +100,7 @@
                         </replacement>
                         <replacement>
                             <token>%version%</token>
-                            <value>${parent.version}</value>
+                            <value>${project.parent.version}</value>
                         </replacement>
                     </replacements>
                 </configuration>
