--- a/selene-core/pom.xml
+++ b/selene-core/pom.xml
@@ -72,7 +72,7 @@
                             <goal>shade</goal>
                         </goals>
                         <configuration>
-                            <minimizeJar>true</minimizeJar>
+                            <minimizeJar>false</minimizeJar>
                         </configuration>
                     </execution>
                 </executions>
