--- a/extensions/pom.xml
+++ b/extensions/pom.xml
@@ -31,6 +31,16 @@
         <version>3.0.0-alpha</version>
     </parent>
 
+    <properties>
+        <javalite.version>2.4-j8</javalite.version>
+    </properties>
+
+    <repositories>
+        <repository>
+            <id>tmate</id>
+            <url>http://maven.tmatesoft.com/content/repositories/releases</url>
+        </repository>
+    </repositories>
 
     <dependencies>
         <!-- Modules -->
@@ -44,6 +54,13 @@
             <artifactId>selene-common</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
+
+        <!-- SQL Extension dependencies -->
+        <dependency>
+        <groupId>org.javalite</groupId>
+        <artifactId>activejdbc</artifactId>
+        <version>${javalite.version}</version>
+    </dependency>
     </dependencies>
 
 </project>
