--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
         <module>sponge-112</module>
         <module>extensions</module>
         <module>sponge-extensions</module>
+        <module>darwin-extensions</module>
     </modules>
 
     <properties>
