--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
         <module>sponge-1.12</module>
         <!-- Extension modules -->
         <module>extensions</module>
-        <module>darwin-extensions</module>
+        <module>darwin</module>
     </modules>
 
     <properties>
