--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -17,7 +17,8 @@ jobs:
         with:
           java-version: 1.8
       - name: Build with Maven
-        run: mvn -B package --file pom.xml
+        uses: actions/checkout@v2
         with:
           token: ${{ secrets.SELENE_AT }}
           submodules: recursive
+        run: mvn -B package --file pom.xml
