--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -16,8 +16,10 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
-      - name: Build with Maven
-        run: mvn -B package --file pom.xml
+      - name: Checkout submodules
+        uses: actions/checkout@v2
         with:
           token: ${{ secrets.SELENE_AT }}
           submodules: recursive
+      - name: Build with Maven
+        run: mvn -B package --file pom.xml
