--- a/.github/workflows/test/test-sponge-112.yml
+++ b/.github/workflows/test/test-sponge-112.yml
@@ -1,7 +1,4 @@
-# This workflow will build a Java project with Maven
-# For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-maven
-
-name: Build status
+name: Build Selene
 
 on: [pull_request]
 
@@ -22,4 +19,4 @@ jobs:
           token: ${{ secrets.SELENE_AT }}
           submodules: recursive
       - name: Build with Maven
-        run: mvn -B package --file pom.xml
+        run: mvn -B test --file sponge-1.12/pom.xml
