Fix inherited JUnit 4.8 dependency

--- a/pom.xml
+++ b/pom.xml
@@ -135,6 +135,12 @@
             <groupId>com.sk89q.worldedit</groupId>
             <artifactId>worldedit-core</artifactId>
             <version>${worldedit.version}</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>junit</artifactId>
+                    <groupId>junit</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>com.plotsquared</groupId>
