--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,5 @@
+import java.time.LocalDate
+
 /*
  *  Copyright (C) 2020 Guus Lieben
  *
@@ -14,11 +16,6 @@
  *  You should have received a copy of the GNU Lesser General Public License
  *  along with this library. If not, see {@literal<http://www.gnu.org/licenses/>}.
  */
-
-
-
-import java.time.LocalDate
-
 buildscript {
     repositories {
         jcenter()
@@ -34,20 +31,20 @@ plugins {
     id 'java-library'
 }
 
-def getVersionName = { ->
+static def getVersionName() {
     return 'git rev-parse --verify --short HEAD'.execute().text.trim()
 }
 
 version = getVersionName()
 group = project.pluginGroup
 description = 'Common sources for Selene extensions'
+def date = LocalDate.now().toString()
 
 subprojects { Project subProject ->
     apply plugin: 'java'
     apply plugin: 'maven'
     apply plugin: 'com.github.johnrengelman.shadow'
 
-    def date = LocalDate.now().toString()
     group = project.pluginGroup
     version = "${getVersionName()}-$date"
 
@@ -58,6 +55,7 @@ subprojects { Project subProject ->
             def DIRT_SRC_DIR = "${buildDir}/libs"
 
             ant.mkdir(dir: DIST_DEST_DIR)
+            println("Copying all built files to $DIST_DEST_DIR")
             ant.copy(todir: DIST_DEST_DIR) {
                 fileset dir: DIRT_SRC_DIR,
                         includes: "*${version}-${date}*.jar"
