--- a/sponge-1.12/build.gradle
+++ b/sponge-1.12/build.gradle
@@ -22,7 +22,7 @@ plugins {
     id 'org.spongepowered.plugin' version '0.9.0'
 }
 
-archivesBaseName = 'sponge-1.12'
+archivesBaseName = 'selene-sponge-1.12'
 group = project.pluginGroup
 description = 'Sponge API7.x implementation for Selene'
 sponge.plugin.id = pluginId
@@ -53,24 +53,26 @@ dependencies {
     testCompileOnly project(':extensions')
 }
 
-//TODO: Configure pre-built binaries
-task spongeDevServer(dependsOn: build) {
-    def version = getVersionName()
-    def LIBS_DIR = "${buildDir}/libs"
-    def PLUGIN_DIR = "${rootDir}/servers/sponge-112/plugins"
+task prepareServerArtifacts(dependsOn: build) {
+    doLast {
+        def version = getVersionName()
+        def DIST_DIR = "${rootDir}/dist/${date}/${version}"
+        def PLUGIN_DIR = "${rootDir}/servers/sponge-112/plugins"
 
-    delete fileTree(PLUGIN_DIR).matching {
-        include "**/*selene*.jar"
+        delete fileTree(PLUGIN_DIR).matching {
+            include "**/*selene*.jar"
+        }
+
+        println("Copying from: $DIST_DIR:")
+        println("$archivesBaseName-$version-${date}.jar")
+        println("Copying to: $PLUGIN_DIR")
+        ant.copy(todir: PLUGIN_DIR) {
+            fileset dir: DIST_DIR,
+                    includes: "$archivesBaseName-$version-${date}.jar"
+        }
     }
-
-    println("Copying from: $LIBS_DIR:")
-    println("$archivesBaseName-$version-${date}.jar")
-    println("Copying to: $PLUGIN_DIR")
-    ant.copy(todir: PLUGIN_DIR) {
-        fileset dir: LIBS_DIR,
-                includes: "$archivesBaseName-$version-${date}.jar"
-    }
-
+}
+task spongeDevServer(dependsOn: prepareServerArtifacts) {
     doLast {
         javaexec {
             workingDir = "${project.rootDir}/servers/sponge-112"
@@ -83,3 +85,6 @@ task spongeDevServer(dependsOn: build) {
         }
     }
 }
+
+prepareServerArtifacts.dependsOn build
+spongeDevServer.dependsOn prepareServerArtifacts
