--- a/.github/workflows/build-all.yml
+++ b/.github/workflows/build-all.yml
@@ -21,5 +21,5 @@ jobs:
         with:
           token: ${{ secrets.SELENE_AT }}
           submodules: recursive
-      - name: Build with Maven
-        run: mvn -B package --file pom.xml -DSkipTests=true
+      - name: Build (Gradle)
+        run: gradle build -x test
