--- a/.github/workflows/javadoc-verify.yml
+++ b/.github/workflows/javadoc-verify.yml
@@ -21,5 +21,5 @@ jobs:
         with:
           token: ${{ secrets.SELENE_AT }}
           submodules: recursive
-      - name: Build with Maven
-        run: mvn -B javadoc:aggregate --file pom.xml
+      - name: Verify JavaDocs (Gradle)
+        run: gradle aggregatedJavadocs
