--- a/.github/workflows/test-complete.yml
+++ b/.github/workflows/test-complete.yml
@@ -18,5 +18,5 @@ jobs:
         with:
           token: ${{ secrets.SELENE_AT }}
           submodules: recursive
-      - name: Build with Maven
-        run: mvn -B test --file pom.xml
+      - name: Tests (Gradle)
+        run: gradle test
