--- a/sponge-7/build.gradle
+++ b/sponge-7/build.gradle
@@ -22,7 +22,7 @@ plugins {
     id 'org.spongepowered.plugin' version '0.9.0'
 }
 
-archivesBaseName = 'selene-sponge-1.12'
+archivesBaseName = 'selene-sponge-api7'
 group = project.pluginGroup
 description = 'Sponge API7.x implementation for Selene'
 sponge.plugin.id = pluginId
