Draft: XStream file manager (XML)

--- a/gradle.properties
+++ b/gradle.properties
@@ -30,6 +30,8 @@ guiceVersion=4.2.2
 ## Core
 reflectionsVersion=0.9.11
 apacheCommonsCollections=4.1
+## Common
+xstreamVersion=1.4.15
 ## Sponge API7
 spongeApi7Version=7.3.0
 spongeCommon7Version=1.12.2-7.3.0:dev
