--- a/gradle.properties
+++ b/gradle.properties
@@ -27,6 +27,8 @@ plotSquaredVersion=3.1
 jetbrainsAnnotationsVersion=19.0.0
 mockitoVersion=1.10.19
 guiceVersion=4.2.2
+slf4jVersion=1.7.25
+hamcrestVersion=2.0.0.0
 ## Core
 reflectionsVersion=0.9.11
 apacheCommonsCollections=4.1
@@ -38,7 +40,7 @@ spongeCommon7Version=1.12.2-7.3.0:dev
 luckPermsVersion=4.4
 magiBridgeVersion=2.10
 multiChatVersion=1.8.1
-worldEditSpongeVersion=7.3.0-SNAPSHOT
+worldEditSpongeVersion=6.1.7-SNAPSHOT
 nucleusApiVersion=1.14.3-SNAPSHOT-S7.1
 ## Extensions
 jooqVersion=3.14.3
