Implement XStream file (de)serialization

--- a/gradle.properties
+++ b/gradle.properties
@@ -18,30 +18,40 @@ pluginGroup=org.dockbox.selene
 pluginId=selene
 # Dependency versions
 ## Global
-configurateVersion=3.6.1
+### Testing
 junitVersion=5.3.2
-jdaVersion=4.1.1_155
+mockitoVersion=1.10.19
+### WorldEdit
 faweVersion=latest
 worldEditCoreVersion=6.1
-plotSquaredVersion=3.1
+### Annotations
 jetbrainsAnnotationsVersion=19.0.0
-mockitoVersion=1.10.19
+### Internal
 guiceVersion=4.2.2
 slf4jVersion=1.7.25
-hamcrestVersion=2.0.0.0
+### Other
+plotSquaredVersion=3.1
+jdaVersion=4.1.1_155
 ## Core
 reflectionsVersion=0.9.11
 apacheCommonsCollections=4.1
 ## Common
+### Serialization
+hamcrestVersion=2.0.0.0
+configurateVersion=3.6.1
 xstreamVersion=1.4.15
+woodstoxVersion=6.2.3
 ## Sponge API7
+### Platforms
 spongeApi7Version=7.3.0
 spongeCommon7Version=1.12.2-7.3.0:dev
+### Plugins
 luckPermsVersion=4.4
 magiBridgeVersion=2.10
 multiChatVersion=1.8.1
 worldEditSpongeVersion=6.1.7-SNAPSHOT
 nucleusApiVersion=1.14.3-SNAPSHOT-S7.1
 ## Extensions
+### SQL Extension
 jooqVersion=3.14.3
 xerialSqliteJdbcVersion=3.32.3.2
