--- a/extensions/build.gradle
+++ b/extensions/build.gradle
@@ -25,6 +25,7 @@ description = 'Integrated extensions for Selene'
 dependencies {
     compileOnly project(':selene-core')
     compileOnly project(':selene-common')
+
     testCompile project(':selene-core')
     testCompile project(':selene-common')
 
@@ -35,4 +36,10 @@ dependencies {
 
     testRuntime "org.jooq:jooq:$jooqVersion"
     testCompile "org.xerial:sqlite-jdbc:$xerialSqliteJdbcVersion"
+
+    // Test fixtures
+    testCompile testFixtures(project(":selene-common"))
+    testImplementation "com.thoughtworks.xstream:xstream:$xstreamVersion"
+    testImplementation 'com.fasterxml.woodstox:woodstox-core:6.2.3'
+
 }
