--- a/gradle.properties
+++ b/gradle.properties
@@ -51,6 +51,7 @@ magiBridgeVersion=2.10
 multiChatVersion=1.8.1
 worldEditSpongeVersion=6.1.7-SNAPSHOT
 nucleusApiVersion=1.14.3-SNAPSHOT-S7.1
+flashLibsVersion=0.1.2
 ## Extensions
 ### SQL Extension
 jooqVersion=3.14.3
