Add XML web utilities

--- a/gradle.properties
+++ b/gradle.properties
@@ -41,6 +41,7 @@ hamcrestVersion=2.0.0.0
 configurateVersion=3.6.1
 xstreamVersion=1.4.15
 woodstoxVersion=6.2.3
+gsonXmlVersion=0.1.7
 ## Sponge API7
 ### Platforms
 spongeApi7Version=7.3.0
