Prepare `examples` directory

--- a/examples/build.gradle
+++ b/examples/build.gradle
@@ -15,14 +15,17 @@
  *  along with this library. If not, see {@literal<http://www.gnu.org/licenses/>}.
  */
 
-rootProject.name = 'Selene'
-
-include 'selene-core'
-include 'selene-common'
-include 'extensions'
-include 'sponge-7'
-if(file('darwin').exists()){
-    include ':darwin'
+plugins {
+    id 'java'
 }
 
-include 'examples'
+group = 'org.dockbox.selene.sample'
+description = 'Sample extensions for Selene'
+
+dependencies {
+    compileOnly project(':selene-core')
+    compileOnly project(':selene-common')
+
+    testCompile project(':selene-core')
+    testCompile project(':selene-common')
+}
