--- a/.github/workflows/build-all.yml
+++ b/.github/workflows/build-all.yml
@@ -21,5 +21,8 @@ jobs:
         with:
           token: ${{ secrets.SELENE_AT }}
           submodules: recursive
+      - name: Build NMS (Gradle)
+        run: gradle build -x test
+        working-directory: selene-nms-1.12
       - name: Build (Gradle)
         run: gradle build -x test
