--- a/.github/workflows/build-all.yml
+++ b/.github/workflows/build-all.yml
@@ -21,9 +21,11 @@ jobs:
         with:
           token: ${{ secrets.SELENE_AT }}
           submodules: recursive
-      - uses: eskatos/gradle-command-action@v1
-        with:
-          build-root-directory: selene-nms-1.12
-          arguments: build -x test
+      - name: Grant execute permission for gradlew (NMS)
+        working-directory: selene-nms-1.12
+        run: chmod +x gradlew
+      - name: Build NMS (Gradle Wrapper)
+        working-directory: selene-nms-1.12
+        run: ./gradlew build -x test
       - name: Build (Gradle)
         run: gradle build -x test
