--- a/.github/workflows/javadoc-verify.yml
+++ b/.github/workflows/javadoc-verify.yml
@@ -21,5 +21,11 @@ jobs:
         with:
           token: ${{ secrets.SELENE_AT }}
           submodules: recursive
+      - name: Grant execute permission for gradlew (NMS)
+        working-directory: selene-nms-1.12
+        run: chmod +x gradlew
+      - name: Build NMS (Gradle Wrapper)
+        working-directory: selene-nms-1.12
+        run: ./gradlew build -x test
       - name: Verify JavaDocs (Gradle)
         run: gradle aggregatedJavadocs
