--- a/.github/workflows/test-complete.yml
+++ b/.github/workflows/test-complete.yml
@@ -18,5 +18,11 @@ jobs:
         with:
           token: ${{ secrets.SELENE_AT }}
           submodules: recursive
+      - name: Grant execute permission for gradlew (NMS)
+        working-directory: selene-nms-1.12
+        run: chmod +x gradlew
+      - name: Build NMS (Gradle Wrapper)
+        working-directory: selene-nms-1.12
+        run: ./gradlew build -x test
       - name: Tests (Gradle)
         run: gradle test
