--- a/extensions/build.gradle
+++ b/extensions/build.gradle
@@ -37,8 +37,7 @@ dependencies {
     testRuntime "org.jooq:jooq:$jooqVersion"
     testCompile "org.xerial:sqlite-jdbc:$xerialSqliteJdbcVersion"
 
-    // Test fixtures
-    testCompile testFixtures(project(":selene-common"))
+    // Test file managers
     testImplementation "com.thoughtworks.xstream:xstream:$xstreamVersion"
     testImplementation 'com.fasterxml.woodstox:woodstox-core:6.2.3'
 
