--- a/settings.gradle
+++ b/settings.gradle
@@ -19,6 +19,7 @@ rootProject.name = 'Selene'
 
 include 'selene-core'
 include 'selene-common'
+include 'selene-nms-1.12'
 include 'extensions'
 include 'sponge-7'
 if(file('darwin').exists()){
