--- a/sponge-7/build.gradle
+++ b/sponge-7/build.gradle
@@ -36,9 +36,12 @@ repositories {
 }
 
 dependencies {
-    compile project(path: ':selene-core', configuration: 'shadow')
-    compile project(path: ':selene-common', configuration: 'shadow')
-    compile project(path: ':extensions', configuration: 'shadow')
+    compile project(':selene-core')
+    compile project(':selene-common')
+    compile project(':extensions')
+    compile(project(':selene-nms-1.12')) {
+        exclude group: 'net.minecraftforge', module: 'forge'
+    }
 
     compileOnly "me.lucko.luckperms:luckperms-api:$luckPermsVersion"
     compileOnly ("org.spongepowered:spongeapi:$spongeApi7Version") {
@@ -58,14 +61,15 @@ dependencies {
     testCompileOnly project(':selene-core')
     testCompileOnly project(':selene-common')
     testCompileOnly project(':extensions')
+    testCompileOnly(project(':selene-nms-1.12')) {
+        exclude group: 'net.minecraftforge', module: 'forge'
+    }
 
     if (findProject(':darwin') != null) {
-        compile project(path: ':darwin', configuration: 'shadow')
+        compile project(':darwin')
         testCompileOnly project(':darwin')
     }
 
-    // Compile to include in FatJar
-    compile files('../selene-nms-1.12/build/libs/selene-nms-1.12.jar')
     compileOnly files('libs/PacketGate-0.1.2.jar')
 }
 
