--- a/extensions/build.gradle
+++ b/extensions/build.gradle
@@ -30,9 +30,9 @@ dependencies {
     testCompile project(':selene-common')
 
     // SQL Extension dependencies
-    shadow "org.jooq:jooq:$jooqVersion"
-    shadow "org.jooq:jooq-meta:$jooqVersion"
-    shadow "org.jooq:jooq-codegen:$jooqVersion"
+    compile "org.jooq:jooq:$jooqVersion"
+    compile "org.jooq:jooq-meta:$jooqVersion"
+    compile "org.jooq:jooq-codegen:$jooqVersion"
 
     testRuntime "org.jooq:jooq:$jooqVersion"
     testCompile "org.xerial:sqlite-jdbc:$xerialSqliteJdbcVersion"
