--- a/.github/workflows/build-all.yml
+++ b/.github/workflows/build-all.yml
@@ -21,5 +21,7 @@ jobs:
         with:
           token: ${{ secrets.SELENE_AT }}
           submodules: recursive
-      - name: Build (Gradle)
-        run: gradle build -x test
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+      - name: Build project (Gradle Wrapper)
+        run: ./gradlew build -x test
