--- a/.github/workflows/javadoc-verify.yml
+++ b/.github/workflows/javadoc-verify.yml
@@ -21,5 +21,7 @@ jobs:
         with:
           token: ${{ secrets.SELENE_AT }}
           submodules: recursive
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
       - name: Verify JavaDocs (Gradle)
-        run: gradle aggregatedJavadocs
+        run: ./gradlew aggregatedJavadocs
