--- a/.github/workflows/test-complete.yml
+++ b/.github/workflows/test-complete.yml
@@ -18,5 +18,7 @@ jobs:
         with:
           token: ${{ secrets.SELENE_AT }}
           submodules: recursive
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
       - name: Tests (Gradle)
-        run: gradle test
+        run: ./gradlew test
