--- a/extensions/build.gradle
+++ b/extensions/build.gradle
@@ -24,10 +24,14 @@ description = 'Integrated extensions for Selene'
 
 dependencies {
     compileOnly project(':selene-core')
-    compileOnly project(':selene-common')
+    compileOnly(project(':selene-common')) {
+        exclude group: "org.spongepowered", module: "configurate**"
+    }
 
     testCompile project(':selene-core')
-    testCompile project(':selene-common')
+    testCompile(project(':selene-common')) {
+        exclude group: "org.spongepowered", module: "configurate**"
+    }
 
     // SQL Extension dependencies
     compile "org.jooq:jooq:$jooqVersion"
