--- a/selene-common/build.gradle
+++ b/selene-common/build.gradle
@@ -22,6 +22,13 @@ plugins {
 group = 'org.dockbox.selene.core.impl'
 description = 'Default implementations for Selene'
 
+repositories {
+    maven { // Only used for Configurate, not for platform implementations
+        name 'Sponge maven repo'
+        url 'https://repo.spongepowered.org/maven'
+    }
+}
+
 dependencies {
     compile project(':selene-core')
 
