--- a/sponge-7/build.gradle
+++ b/sponge-7/build.gradle
@@ -37,7 +37,9 @@ repositories {
 
 dependencies {
     compile project(':selene-core')
-    compile project(':selene-common')
+    compile(project(':selene-common')) {
+        exclude group: "org.spongepowered", module: "configurate**"
+    }
     compile project(':extensions')
     compile(project(':selene-nms-1.12')) {
         exclude group: 'net.minecraftforge', module: 'forge'
@@ -59,7 +61,9 @@ dependencies {
     compileOnly 'io.netty:netty-all:4.1.24.Final'
 
     testCompileOnly project(':selene-core')
-    testCompileOnly project(':selene-common')
+    testCompileOnly(project(':selene-common')) {
+        exclude group: "org.spongepowered", module: "configurate**"
+    }
     testCompileOnly project(':extensions')
     testCompileOnly(project(':selene-nms-1.12')) {
         exclude group: 'net.minecraftforge', module: 'forge'
